--- a/style.css
+++ b/style.css
@@ -676,6 +676,50 @@ a {
     color: red;
     font-size: 14px;
 }
+
+form#form_second .error-message {
+    right: 0;
+}
+
+.form-label {
+    position: absolute;
+    right: 25px;
+    top: 1px;
+    color: #000;
+    background: #fff;
+    font-size: 21px;
+    line-height: 34px;
+    z-index: 1;
+    transition: transform 150ms ease-out, font-size 150ms ease-out;
+}
+
+.focused .form-label {
+    transform: translateY(-50%);
+    font-size: 14px;
+    line-height: 1;
+  }
+
+  #form_second .form-label {
+    right: 10px;
+  }
+
+  .form-group {
+    position: relative;
+  }
+
+  .form-group p {
+    text-align: right;
+}
+
+  #contact_form .form-label {
+    font-size: 26px;
+    line-height: 50px;
+  }
+
+  .contact-label {
+    text-align: right;
+    font-size: 24px;
+}
 /*---------- Section Tabs ----------*/
 
 /* Style the tab */
@@ -1457,10 +1501,14 @@ section.contact-form {
     background-color: #F1F5F8;
 }
 .contact-form-wrapper {
-    text-align: center;
     max-width: 1060px;
     margin: 0 auto;
 }
+
+.contact-form-wrapper .title, .contact-form-wrapper .subtitle {
+    text-align: center;
+}
+
 .contact-form-wrapper h1.title ,
 .contact-form-wrapper h2.title {
     font-size: 68px;
@@ -1491,18 +1539,22 @@ textarea#contact-textarea {
     height: 200px;
 }
 .cform-row1, .cform-row2  {
-    margin-bottom: 35px;
+    margin-bottom: 16px;
 }
 .cform-row2 p{
-    display: flex;
-    justify-content: space-between;
     width: 100%;
 }
 .cform-row2 p span {
     display: block;
-    width: 49%;
 }
-.contact-submit {
+
+.cform-row2 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.button.contact-submit {
+    display: block;
     width: 215px;
     height: 60px;
     background: radial-gradient(#434b78, #333958);
@@ -1512,9 +1564,9 @@ textarea#contact-textarea {
     padding: 5px;
     font-size: 35px;
     line-height: 55px;
-    display: block;
     margin: 0 auto;
     margin-top: 50px;
+    text-align: center;
 }
 .contact-location{
     padding: 90px 0;
