--- a/css/accessibility.css
+++ b/css/accessibility.css
@@ -21,6 +21,10 @@ body.contrast p.hidden_part:focus {
     outline: 2px solid white;
 }
 
+body.contrast button:focus, body.contrast a:focus, body.contrast input:focus {
+    outline: 2px solid white;
+}
+
 @media only screen and (height: 341px) and (width: 720px) {
     section.section-form-1, section.section-form-2 {
         background-position: right;
