--- a/css/media.css
+++ b/css/media.css
@@ -20,12 +20,12 @@
 }
 @media screen and (max-width: 1510px) {
     .menu li {
-        padding: 0 12px;
+        padding: 0 10px;
     }
 }
 @media screen and (max-width: 1440px) {
     circle#cc {
-        transform: translate(92%, 20%) scaleX(1.7) !important;
+        transform: translate(97%, 12%) scaleX(1.7) !important;
     }
     img.service-screw, img.service-pliers {
         height: 160px;
@@ -56,6 +56,13 @@
         bottom: -49px;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .menu li:last-child {
+        display: none;
+    }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1366px){
     .wrapper {
         max-width: 1060px;
@@ -129,6 +136,11 @@
     header.header {
         box-shadow: 3px 3px 3px #ccc;
     }
+
+    header .button {
+        display: none;
+    }
+
     .logo {
         padding: 10px 20px;
         margin: 0;
@@ -169,7 +181,7 @@
         color: #fff;
         text-decoration: none;
         font-size: 20px;
-        padding: 20px 0;
+        padding: 18px 0;
         overflow: hidden;
         border-bottom: thin solid #555;
     }
@@ -180,7 +192,7 @@
     .burger {
         width: 70px;
         height: 70px;
-        display: block;
+        display: block !important;
         -moz-transition: all 0.6s ease-in-out;
         -o-transition: all 0.6s ease-in-out;
         -webkit-transition: all 0.6s ease-in-out;
