--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@ header {
     display: flex;
     height: 120px;
     align-items: center;
+    justify-content: space-between;
+    padding: 0 30px;
+    box-sizing: border-box;
 }
 header:before {
     content: '';
@@ -89,12 +92,19 @@ header h1 a {
     color: #000;
 }
 
-.logo {
-    padding: 0px 60px;
-    margin-top: 55px;
-}
 .logo img {
+    max-width: 120px;
     width: 100%;
+}
+
+header .button {
+    width: 160px;
+    background-color: #333958;
+    border: 0;
+    color: #fff;
+    padding: 5px;
+    font-size: 22px;
+    transition: 0.3s;
 }
 .header-sticky .logo {
     max-width: 120px;
@@ -110,6 +120,7 @@ header h1 a {
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 3px;
+    padding: 0;
 }
 .menu li {
     display: inline-block;
@@ -129,7 +140,7 @@ header h1 a {
 .menu li a {
     color: #000;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 22px;
     padding: 0;
 }
 .menu li a:hover{
