--- a/style.css
+++ b/style.css
@@ -1283,7 +1283,8 @@ section.inner-hero {
 }
 
 .insurance-list li {
-    font-family: Fbtextiller-Light sans-serif;
+    font-family: Fbtextiller-Light;
+    font-size: 22px;
     margin-bottom: 5px;
     text-align: right;
     list-style: none;
@@ -1291,7 +1292,17 @@ section.inner-hero {
 
 .insurance-title {
     text-align: right;
+    font-size: 22px;
+    max-width: 700px;
+    margin: 0 auto;
     padding-right: 40px;
+    margin-top: 20px;
+}
+
+ul.insurance-list {
+    max-width: 700px;
+    margin: 0 auto;
+    padding-right: 20px;
 }
 
 /*---------- Products pages ----------*/
